<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_refresh_data"
        android:icon="@drawable/ic_baseline_cached_24"
        android:title="@string/iv_refresh_data_desc"
        app:showAsAction="always"
        app:actionLayout="@layout/action_refresh_data"/>

    <item
        android:id="@+id/action_change_location"
        android:icon="@drawable/ic_baseline_edit_location_24"
        android:title="@string/change_location_desc"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionLayout="@layout/action_change_location"/>

    <item
        android:id="@+id/action_show_settings"
        android:title="@string/settings"
        android:contentDescription="@string/open_settings"
        app:showAsAction="never"/>
</menu>