<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <TextView
        android:id="@+id/w_daily_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="12dp"
        android:maxLines="1"
        android:autoSizeTextType="uniform"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline2" />

    <FrameLayout
        android:id="@+id/w_daily_weather_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@id/w_daily_city">

        <ImageView
            android:id="@+id/w_daily_weather_icon"
            android:contentDescription="@string/w_icon_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/w_daily_weather_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/on_secondary_25"
            android:textSize="20pt"
            android:textAlignment="center"
            android:autoSizeTextType="uniform"
            android:elegantTextHeight="true"
            android:letterSpacing="0.35"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Button"/>

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/w_daily_temp_chart_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/w_daily_weather_layout"
        android:layout_margin="24dp"
        android:background="@drawable/bg_info_container"
        android:padding="12dp">

        <TextView
            android:id="@+id/w_daily_temp_chart_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/w_daily_temp_chart"
            app:layout_constraintRight_toRightOf="@id/w_daily_temp_chart"
            android:layout_marginVertical="12dp"
            android:text="@string/temperature_forecast"
            android:textSize="7pt"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Overline"/>

        <lecho.lib.hellocharts.view.LineChartView
            android:id="@+id/w_daily_temp_chart"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintTop_toBottomOf="@id/w_daily_temp_chart_title"
            android:layout_marginHorizontal="6dp"/>

        <TextView
            android:id="@+id/w_daily_morning_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/w_daily_temp_chart"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/morning"
            android:textSize="7pt"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"/>

        <TextView
            android:id="@+id/w_daily_day_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/w_daily_morning_label"
            app:layout_constraintRight_toLeftOf="@id/w_daily_evening_label"
            app:layout_constraintTop_toBottomOf="@id/w_daily_temp_chart"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/day"
            android:textSize="7pt"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"/>

        <TextView
            android:id="@+id/w_daily_evening_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/w_daily_temp_chart"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/evening"
            android:textSize="7pt"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/w_daily_sun_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/w_daily_temp_chart_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_info_container">

        <TextView
            android:id="@+id/w_daily_sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_sun_item_margin"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"/>

        <TextView
            android:id="@+id/w_daily_sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_sun_item_margin"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>